@@ -9,7 +9,6 @@ WriteMakefile(
 		'Test::More' => '0.47',
 		'JSON::PP'   => 2.27103,
 		'CPAN::Meta::YAML' => '0.002',
-		'Module::Load::Conditional' => '0.26',
 	},
 	($] >= 5.005 ? (
 		AUTHOR  => 'Adam Kennedy <adamk@cpan.org>',
